# im2model_slices_engine

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: CMakeLists.txt  engine.cpp
